apps/grim-backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grim-backend
spec:
  selector:
    app.kubernetes.io/name: grim-backend
  ports:
    - name: http
      port: 80
      targetPort: http
