apps/grim-backend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grim-backend
spec:
  ingressClassName: nginx
  rules:
    - host: lowjungxuan.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grim-backend
                port:
                  number: 80
